--- a/src/GraphRag.Net.Web/appsettings.json
+++ b/src/GraphRag.Net.Web/appsettings.json
@@ -24,7 +24,7 @@
     "HeaderHeight": 48
   },
   "GraphOpenAI": {
-    "Key": "你的秘钥",
+    "Key": "你的秘钥，注册antskapi享受2折优惠",
     "EndPoint": "https://api.antsk.cn/",
     "ChatModel": "gpt-4o",
     "EmbeddingModel": "text-embedding-ada-002"
